Some option is not visible in Chrome. https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/509

--- a/wp-content/themes/wp-reddoor/static/styles/src/style.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/style.less
@@ -436,5 +436,16 @@
       margin-top: 15px;
     }
   }
+  .wpp-advanced-supermap {
+    .sm-scrollable-table {
+      overflow: visible !important;
+    }
+    .sm-properties-collection {
+      .dropdown-columns-options{
+        z-index: 2 !important;
+      }
+    }
+  }
+
 }
 
